--- a/custom_components/zteh388x/manifest.json
+++ b/custom_components/zteh388x/manifest.json
@@ -1,11 +1,11 @@
 {
-  "domain": "zteh388x",
+  "domain": "zteh388x-2",
   "name": "ZTE H388X (TIM HUB+)",
-  "version": "1.0",
+  "version": "1.2",
   "integration_type": "device",
-  "codeowners": ["@masoneff3"],
-  "documentation": "https://github.com/masoneff3/ha_zteh388x",
-  "issue_tracker": "https://github.com/masoneff3/ha_zteh388x/issues",
+  "codeowners": ["@masoneff3", "bunz"],
+  "documentation": "https://github.com/66bunz/ha_zteh388x",
+  "issue_tracker": "https://github.com/66bunz/ha_zteh388x/issues",
   "dependencies": [],
   "requirements": ["requests"],
   "config_flow": false,
